nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/Reward_Transaction__c.object-meta.xml
<CustomObject>
    <label>Reward Transaction</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Reward Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>