nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reward Transactions</relationshipLabel>
    <relationshipName>Reward_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>