nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Reward Transactions</relationshipLabel>
    <relationshipName>Reward_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>