nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/fields/Coupun_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupun_Code__c</fullName>
    <label>Coupun Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>