nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Hours</label>
    <referenceTo>GW_Volunteers__Volunteer_Hours__c</referenceTo>
    <relationshipLabel>Reward Transactions</relationshipLabel>
    <relationshipName>Reward_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>