nonprofit-dev/force-app/main/default/objects/Reward_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Coupun_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>